# Binding_go_cxx

./: CMakeLists.txt  README.md
archive/BindingTest/: CMakeLists.txt
archive/BindingTest/.cache/clangd/index/: num.cpp.C34CAFBCF4E8E68A.idx  num.h.56FE1E326CC63B1A.idx  nummer.cpp.27B6B21E32A04538.idx  nummer.hpp.9D153D08E61085A4.idx
archive/BindingTest/goFile/: CMakeLists.txt  __CMakeLists.txt  lib.go  num.go
archive/BindingTest/goFile/_obj/: _cgo_export.h  _cgo_gotypes.go  num.cgo1.go  num.cgo2.c
archive/BindingTest/hello/: main.go
archive/BindingTest/src/: CMakeLists.txt  libmy.so.0.0.0  num.cpp  nummer.cpp
archive/BindingTest/src/include/: num.h  nummer.hpp
archive/BindingTest/util/: go.mod  main.go
archive/goCppBind/: CMakeLists.txt  goCppBind.cpp  goCppBind.go  goCppBind.h
cpp/: CMakeLists.txt  goCppBind.cpp
src/: .goCppBind.go.swp  CMakeLists.txt  __main.go  goCppBind.go
